fix radio buttons and add overflow hidden to main

--- a/src/css/proposal-to-leave/proposal-to-leave-desktop.css
+++ b/src/css/proposal-to-leave/proposal-to-leave-desktop.css
@@ -17,8 +17,7 @@
 
   .outer-card {
     width: 1024px;
-    border-radius: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     transform: translateX(0);
   }
 
